# packages/aws/lambda/crates/api-generated/src/models/mod.rs
@@ -22,6 +22,10 @@ pub mod remove_app_request;
 pub use self::remove_app_request::RemoveAppRequest;
 pub mod remove_developer_request;
 pub use self::remove_developer_request::RemoveDeveloperRequest;
+pub mod sign_message_request;
+pub use self::sign_message_request::SignMessageRequest;
+pub mod sign_message_response;
+pub use self::sign_message_response::SignMessageResponse;
 pub mod sui_keypair_request;
 pub use self::sui_keypair_request::SuiKeypairRequest;
 pub mod sui_keypair_response;
