# packages/aws/lambda/crates/api-generated/src/models/sign_message_request.rs
@@ -1,0 +1,36 @@
+/*
+ * Calculator API
+ *
+ * Simple API for mathematical operations
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+use crate::models;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
+pub struct SignMessageRequest {
+    /// Type of login (e.g., google, github, email)
+    #[serde(rename = "login_type")]
+    pub login_type: String,
+    /// Login identifier (e.g., email address, username)
+    #[serde(rename = "login")]
+    pub login: String,
+    /// Message to sign as a vector of bytes (u8)
+    #[serde(rename = "message")]
+    pub message: Vec<i32>,
+}
+
+impl SignMessageRequest {
+    pub fn new(login_type: String, login: String, message: Vec<i32>) -> SignMessageRequest {
+        SignMessageRequest {
+            login_type,
+            login,
+            message,
+        }
+    }
+}
+
