# packages/aws/lambda/crates/api-generated/src/models/sign_message_response.rs
@@ -1,0 +1,32 @@
+/*
+ * Calculator API
+ *
+ * Simple API for mathematical operations
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+use crate::models;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
+pub struct SignMessageResponse {
+    /// Signed message as a vector of bytes (u8) in Sui signature format
+    #[serde(rename = "signature")]
+    pub signature: Vec<i32>,
+    /// Sui address of the signer
+    #[serde(rename = "address")]
+    pub address: String,
+}
+
+impl SignMessageResponse {
+    pub fn new(signature: Vec<i32>, address: String) -> SignMessageResponse {
+        SignMessageResponse {
+            signature,
+            address,
+        }
+    }
+}
+
